fix: align nav bar styling on the about page with the rest of the pages

--- a/assets/css/about-styles.css
+++ b/assets/css/about-styles.css
@@ -1,9 +1,14 @@
 body{
-    font-family: 'Droid Serif', serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Old Standard TT", serif;
+    font-weight: 500;
+    font-style: normal;
+    background-color: #FFF1E5;
     font-size: 20px;
     color: #704214;
+    padding: 5% 0;
 }
-
 
 p{
     margin-top: 0;
@@ -17,9 +22,9 @@ p{
 
 .subhead{
     text-transform: uppercase;
-    border-bottom: 2px solid #704214;
     border-top: 2px solid #704214;
-    padding: 92px 0 12px 0;
+    border-bottom: 2px solid #704214;
+    padding: 12px 0 12px 0;
     min-width: 100%;
     text-align: center;
     font-size: 100%;
